--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <nav class="navbar navbar-dark navbar-expand-md py-0 fixed-top" id="mainNavbar">
         <a href="" class="navbar-brand">CANDY</a>
         <!-- Navbar toggle button after the window shrinks to mid size -->
-        <button class="navbar-toggler" data-toggle="collapse" data-traget="navLinks" aria-label="Toggle Navbar">
+        <button class="navbar-toggler" data-toggle="collapse" data-target="#navLinks" aria-label="Toggle Navbar">
             <span class="navbar-toggler-icon"></span>
         </button>
         <!-- Actual navbar items -->
@@ -45,6 +45,24 @@
             </ul>
         </div>
     </nav>
+
+    <section class="container-fluid px-0">
+        <div class="row align-items-center">
+            <div class="col-lg-6">
+                <div class="text-white text-center d-none d-lg-block" id="headingGroup">
+                    <h2 class="display-4">MUSEUM <span>/</span> OF <span>/</span> CANDY</h2>
+                    <h2 class="display-4">MUSEUM <span>/</span> OF <span>/</span> CANDY</h2>
+                    <h2 class="display-4">MUSEUM <span>/</span> OF <span>/</span> CANDY</h2>
+                    <h2 class="display-4">MUSEUM <span>/</span> OF <span>/</span> CANDY</h2>
+                    <h2 class="display-4">MUSEUM <span>/</span> OF <span>/</span> CANDY</h2>
+                    <h2 class="display-4">MUSEUM <span>/</span> OF <span>/</span> CANDY</h2>
+                </div>
+            </div>
+            <div class="col-lg-6">
+                <img class="img-fluid" src="imgs/hand2.png" alt="">
+            </div>
+        </div>
+    </section>
 
 
 
