--- a/index.html
+++ b/index.html
@@ -64,6 +64,56 @@
         </div>
     </section>
 
+    <section class="container-fluid px-0">
+        <!-- First row -->
+        <div class="row align-items-center content">
+            <!-- Image on the left -->
+            <div class="col-md-6 order-2 order-md-1">
+                <img src="imgs/milk.png" class="img-fluid" alt="">
+            </div>
+            <!-- Text on the right -->
+            <div class="col-md-6 text-center order-1 order-md-2">
+                <div class="row justify-content-center">
+                    <div class="col-10 col-lg-8 blurb">
+                        <h2>MUSEUM OF CANDY</h2>
+                        <img src="imgs/lolli_icon.png" alt="" class="d-none d-lg-inline">
+                        <p class="lead">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, culpa corporis ipsum illo
+                            ad
+                            accusamus eius vero nobis iure! Eos excepturi consequatur dolorem, dolor nemo impedit eaque
+                            itaque
+                            beatae nisi?
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Second row -->
+        <div class="row align-items-center content">
+            <!-- Image on the left -->
+            <div class="col-md-6 order-2 order-md-1">
+                <img src="imgs/milk.png" class="img-fluid" alt="">
+            </div>
+            <!-- Text on the right -->
+            <div class="col-md-6 text-center order-1 order-md-2">
+                <div class="row justify-content-center">
+                    <div class="col-10 col-lg-8 blurb">
+                        <h2>MUSEUM OF CANDY</h2>
+                        <img src="imgs/lolli_icon.png" alt="" class="d-none d-lg-inline">
+                        <p class="lead">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, culpa corporis ipsum illo
+                            ad
+                            accusamus eius vero nobis iure! Eos excepturi consequatur dolorem, dolor nemo impedit eaque
+                            itaque
+                            beatae nisi?
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
 
     <!-- Bootstrap javascript -->
