--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <!-- Text on the right -->
             <div class="col-md-6 text-center order-1 order-md-2">
                 <div class="row justify-content-center">
-                    <div class="col-10 col-lg-8 blurb">
+                    <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
                         <h2>MUSEUM OF CANDY</h2>
                         <img src="imgs/lolli_icon.png" alt="" class="d-none d-lg-inline">
                         <p class="lead">
@@ -92,13 +92,37 @@
         <!-- Second row -->
         <div class="row align-items-center content">
             <!-- Image on the left -->
+            <div class="col-md-6 order-2">
+                <img src="imgs/gumball.png" class="img-fluid" alt="">
+            </div>
+            <!-- Text on the right -->
+            <div class="col-md-6 text-center order-1">
+                <div class="row justify-content-center">
+                    <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
+                        <h2>MUSEUM OF CANDY</h2>
+                        <img src="imgs/lolli_icon.png" alt="" class="d-none d-lg-inline">
+                        <p class="lead">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, culpa corporis ipsum illo
+                            ad
+                            accusamus eius vero nobis iure! Eos excepturi consequatur dolorem, dolor nemo impedit eaque
+                            itaque
+                            beatae nisi?
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Third row -->
+        <div class="row align-items-center content">
+            <!-- Image on the left -->
             <div class="col-md-6 order-2 order-md-1">
-                <img src="imgs/milk.png" class="img-fluid" alt="">
+                <img src="imgs/sprinkles.png" class="img-fluid" alt="">
             </div>
             <!-- Text on the right -->
             <div class="col-md-6 text-center order-1 order-md-2">
                 <div class="row justify-content-center">
-                    <div class="col-10 col-lg-8 blurb">
+                    <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
                         <h2>MUSEUM OF CANDY</h2>
                         <img src="imgs/lolli_icon.png" alt="" class="d-none d-lg-inline">
                         <p class="lead">
@@ -114,8 +138,6 @@
         </div>
     </section>
 
-
-
     <!-- Bootstrap javascript -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -126,6 +148,15 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
+
+    <script>
+        $(function () {
+            $(document).scroll(function () {
+                var $nav = $("#mainNavbar");
+                $nav.toggleClass("scrolled", $(this).scrollTop() > $nav.height());
+            });
+        });
+    </script>
 </body>
 
 </html>
