Nav-bar auto collapse upon click
Connected navbar items to specific divs on the page and added auto-collapse upon clicking the navbar items.

--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
 <body>
     <!-- Bootstrap navbar -->
     <nav class="navbar navbar-dark navbar-expand-md py-0 fixed-top" id="mainNavbar">
-        <a href="" class="navbar-brand">CANDY</a>
+        <a href="#" class="navbar-brand">CANDY</a>
         <!-- Navbar toggle button after the window shrinks to mid size -->
-        <button class="navbar-toggler" data-toggle="collapse" data-target="#navLinks" aria-label="Toggle Navbar">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navLinks"
+            aria-label="Toggle Navbar" aria-controls="navLinks" aria-expanded="false">
             <span class="navbar-toggler-icon"></span>
         </button>
         <!-- Actual navbar items -->
@@ -32,15 +33,15 @@
             <ul class="navbar-nav">
                 <!-- Home -->
                 <li class="nav-item">
-                    <a href="" class="nav-link">HOME</a>
+                    <a href="#home" class="nav-link">HOME</a>
                 </li>
                 <!-- About -->
                 <li class="nav-item">
-                    <a href="" class="nav-link">ABOUT</a>
+                    <a href="#about" class="nav-link">ABOUT</a>
                 </li>
                 <!-- Tickets -->
-                <li class="nav-item">
-                    <a href="" class="nav-link">TICKETS</a>
+                <li class=" nav-item">
+                    <a href="#tickets" class="nav-link">TICKETS</a>
                 </li>
             </ul>
         </div>
@@ -66,9 +67,9 @@
 
     <section class="container-fluid px-0">
         <!-- First row -->
-        <div class="row align-items-center content">
+        <div class="row align-items-center content" id="home">
             <!-- Image on the left -->
-            <div class="col-md-6 order-2 order-md-1">
+            <div class="col-md-6 order-2 order-md-1 pr-0">
                 <img src="imgs/milk.png" class="img-fluid" alt="">
             </div>
             <!-- Text on the right -->
@@ -90,16 +91,16 @@
         </div>
 
         <!-- Second row -->
-        <div class="row align-items-center content">
+        <div class="row align-items-center content" id="about">
             <!-- Image on the left -->
-            <div class="col-md-6 order-2">
+            <div class="col-md-6 order-2 pl-0">
                 <img src="imgs/gumball.png" class="img-fluid" alt="">
             </div>
             <!-- Text on the right -->
             <div class="col-md-6 text-center order-1">
                 <div class="row justify-content-center">
                     <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
-                        <h2>MUSEUM OF CANDY</h2>
+                        <h2>ABOUT</h2>
                         <img src="imgs/lolli_icon.png" alt="" class="d-none d-lg-inline">
                         <p class="lead">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, culpa corporis ipsum illo
@@ -114,16 +115,16 @@
         </div>
 
         <!-- Third row -->
-        <div class="row align-items-center content">
+        <div class="row align-items-center content" id="tickets">
             <!-- Image on the left -->
-            <div class="col-md-6 order-2 order-md-1">
+            <div class="col-md-6 order-2 order-md-1 pr-0">
                 <img src="imgs/sprinkles.png" class="img-fluid" alt="">
             </div>
             <!-- Text on the right -->
             <div class="col-md-6 text-center order-1 order-md-2">
                 <div class="row justify-content-center">
                     <div class="col-10 col-lg-8 blurb mb-5 mb-md-0">
-                        <h2>MUSEUM OF CANDY</h2>
+                        <h2>TICKETS</h2>
                         <img src="imgs/lolli_icon.png" alt="" class="d-none d-lg-inline">
                         <p class="lead">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, culpa corporis ipsum illo
@@ -149,11 +150,19 @@
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
 
-    <script>
+    <!-- <script>
         $(function () {
             $(document).scroll(function () {
                 var $nav = $("#mainNavbar");
                 $nav.toggleClass("scrolled", $(this).scrollTop() > $nav.height());
+            });
+        });
+    </script> -->
+
+    <script>
+        $(document).ready(function () {
+            $('.navbar-nav>li>a').on('click', function () {
+                $('.navbar-collapse').collapse('hide');
             });
         });
     </script>
